force-app/main/default/objects/OI_Log__c/OI_Log__c.object-meta.xml
<CustomObject>
    <label>OI Log</label>
    <pluralLabel>OI Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Structured log sink, written asynchronously via OI_Log_Event__e subscriber (Architecture §13). Application-internal (ADR-0006).</description>
</CustomObject>