force-app/main/default/objects/OI_Log__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <type>Text</type>
    <length>36</length>
    <description>UUID per user action or scan run — traces a single action end-to-end through OI_Log__c.</description>
</CustomField>