force-app/main/default/objects/OI_Log__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <label>Running User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>OI_Logs</relationshipName>
    <relationshipLabel>OI Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>