force-app/main/default/objects/OI_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Text</type>
    <length>255</length>
    <description>Originating class/method.</description>
</CustomField>